--- a/Proyecto/css/estilo.css
+++ b/Proyecto/css/estilo.css
@@ -1,9 +1,33 @@
-body {background-image: url (im.JPG);}
+body {background-image: url('../imagenes/armada.jpg');
+      background-position: 50% 50%;
+      background-repeat: no-repeat;
+      background-size: cover;
+      }
+
 h1 {text-align: center;
     text-decoration:underline;
-    font-size: x-large;}
+    font-size: x-large;
+    font-family: fantasy;
+    font-variant: small-caps;}
+.a {color: white;}
+
 h2 {text-decoration: underline;}
 
+.iframe {text-align: center;}
 
+header {background-color: thistle;}
+div a {display: inline-block;}
+nav {margin-left: 555px;
+     margin-right: 655px;
+     border: d;}
+
+
+section {background-color: rgb(12, 133, 133);
+         margin-bottom: 15px;
+         margin-left: 5px;
+         margin-right: 600px;
+         }
+aside {background-color: tan;}
 footer {text-align: center;
-        color: white }
+        color: white;
+        background-color: steelblue; }
